Bug 1508858 - Fix assertion failure in SVGObserverUtils r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D191018